# UCU_principles_of_computer_organization

EXAM/: .cproject  .mxproject  .project  EXAM Run.cfg  EXAM.ioc  EXAM.xml
EXAM/Inc/Backup/: main.h.bak
EXAM/Src/: gpio.c  main.c
EXAM/Src/Backup/: gpio.c.bak  main.c.bak
lab1/library_demo_1/: file1.c  file1.cpp  file1.h  file1_c.h  file2.c  file2.cpp  file2.h  file2_c.h  main_file.c  main_file.cpp  makefile.lib  makefile.prg
lab1/libs/: Makefile  file1.h  libfunctions.so.1.0.0  prog
lab1/preparation/: Makefile  file1.cpp  file2.cpp  hellomake  main_file.cpp  program
lab1/result/: README.md
lab1/result/examples/: CMakeLists.txt  makefile
lab1stm/BCMotor/: BCMotor.ioc
lab1stm/forstm/: .cproject  .mxproject  .project  CMakeLists.txt  New_configuration.cfg  forstm.ioc  forstm.xml
lab1stm/servo/: .cproject  .mxproject  .project  servo Run.cfg  servo.ioc  servo.xml
lab1stm/step_motor/: .cproject  .mxproject  .project  step_motor Run.cfg  step_motor.ioc  step_motor.xml
lab1stm/stmlab/: .cproject  .mxproject  .project  stmlab Run.cfg  stmlab.ioc  stmlab.xml
lab2/: main.c  prog
lab2/libb/: library.c  library.h
lab3/: README.md  func_sum.asm  func_sum.s  main.s  makefile  new  prin.asm  print64  print64.asm  printrr  prog  program  task1  task1.asm  test  test.c  test.s
lab3/task2/: README.md  prg27  prg_27.x
led/: .project
morgunenko_midl/: CMakeLists.txt
morgunenko_midl/src/: function.c  function.h  main.c
stmsemihost/: .cproject  .mxproject  .project  stmsemihost.ioc  stmsemihost.xml
stmsemihost/Src/: gpio.c  main.c
(+56 files in other folders)
