cmake_minimum_required(VERSION 3.14)
project(lab1)

SET(CMAKE_VERBOSE_MAKEFILE ON)
set (PROJECT_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src)
set (EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
set (LIBRARY_OUTPUT_PATH ${EXECUTABLE_OUTPUT_PATH})
set (CMAKE_LIBRARY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../library/bin/)
#set (SRC_FILES bzip2.c bzip2recover.c)

find_library(libbz libbz.so REQUIRED)
add_executable(bzip2 bzip2.c)
add_executable(bzip2recover bzip2recover.c)
target_link_libraries(bzip2 ${libbz})
target_link_libraries(bzip2recover ${libbz})